Tue Jun 18 21:58:17 2013  Zachary Scott  <zachary@zacharyscott.net>

	* gc.c: Rename rb_mObSpace -> rb_mObjSpace

Tue Jun 18 20:55:05 2013  Zachary Scott  <zachary@zacharyscott.net>

	* ext/objspace/objspace.c: Document ObjectSpace::InternalObjectWrapper.

Tue Jun 18 20:39:04 2013  Zachary Scott  <zachary@zacharyscott.net>

	* ext/objspace/object_tracing.c: Teach rdoc object_tracing.c [Bug #8537]

Tue Jun 18 20:29:47 2013  Zachary Scott  <zachary@zacharyscott.net>

	* ext/.document: add object_tracing.c to document file

Tue Jun 18 20:20:27 2013  Zachary Scott  <zachary@zacharyscott.net>

	* ext/objspace/objspace.c: rdoc on require to overview from r41355

Tue Jun 18 18:39:58 2013  Tanaka Akira  <akr@fsij.org>

	* configure.in: Check __int128.

	* include/ruby/defines.h (BDIGIT_DBL): Use uint128_t if it is available.
	  (BDIGIT): Use uint64_t if uint128_t is available.
	  (SIZEOF_BDIGITS): Defined for above case.
	  (BDIGIT_DBL_SIGNED): Ditto.
	  (PRI_BDIGIT_PREFIX): Ditto.

	* include/ruby/ruby.h (PRI_64_PREFIX): Defined.

	* bignum.c (rb_big_pow): Don't use BITSPERDIG for the condition which
	  rb_big_pow returns Float or Bignum.

	[ruby-dev:47413] [Feature #8509]

Tue Jun 18 16:43:44 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_heredoc_restore): clear lex_strterm always to get
	  rid of marking recycled node.  this bug is revealed by r41372 with
	  GC.stress=true.

Tue Jun 18 12:53:25 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (nlz): Cast the result explicitly.
	  (big2dbl): Don't assign BDIGIT values to int variable.

Tue Jun 18 12:25:16 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_big_xor): Non-effective code removed.

Tue Jun 18 11:26:05 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_stat): add `generated_normal_object_count_types' for
	  RGENGC_PROFILE >= 2.

Tue Jun 18 11:02:18 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_mark_maybe): check to skip T_NONE.
